Updated by task 'AUTO_TM_MT_1716386466043'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/92035792a0a2309063eb1de8d6ee0ba7a9bc8a79

--- a/help/release-notes/2024/may-2024.md
+++ b/help/release-notes/2024/may-2024.md
@@ -1,10 +1,10 @@
 ---
 title: Notas da versão de maio de 2024 da Adobe Experience Platform
 description: As notas de versão de maio de 2024 da Adobe Experience Platform.
-source-git-commit: 43512c6c942ac444c434179f4ed21f1447465f8a
+source-git-commit: 85acffec03986cf56aeba6b8973ac1edf56a9cd6
 workflow-type: tm+mt
-source-wordcount: '1337'
-ht-degree: 17%
+source-wordcount: '1546'
+ht-degree: 20%
 
 ---
 
@@ -21,6 +21,7 @@ Atualizações dos recursos existentes no Experience Platform:
 - [Serviço de catálogo](#catalog-service)
 - [Painéis](#dashboards)
 - [Governança de dados](#governance)
+- [Destinos](#destinations)
 - [Query Service](#query-service)
 - [Serviço de segmentação](#segmentation)
 - [Origens](#sources)
@@ -39,16 +40,16 @@ O Serviço de catálogo é o sistema de registro para localização e linhagem d
 | --- | --- |
 | Ações em massa | O inventário do conjunto de dados agora oferece suporte a ações em massa. Simplifique os processos de gerenciamento de dados e garanta o gerenciamento eficiente de seus conjuntos de dados com ações em massa. Use ações em massa para economizar tempo, executando várias ações em vários conjuntos de dados simultaneamente.  As ações em massa incluem [Mover para a pasta](../../catalog/datasets/user-guide.md#move-to-folders), [Editar tags](../../catalog/datasets/user-guide.md#manage-tags), e [Excluir](../../catalog/datasets/user-guide.md#delete) conjuntos de dados. <br> ![Ações em massa no espaço de trabalho da interface do usuário de conjuntos de dados.](../2024/assets/may/bulk-actions.png "Ações em massa no espaço de trabalho da interface do usuário de conjuntos de dados."){width="100" zoomable="yes"} <br> Para obter mais informações sobre esse recurso, leia a [Guia da interface do usuário de conjuntos de dados](../../catalog/datasets/user-guide.md#bulk-actions). |
 
-{style=“table-layout:auto”}
+{style="table-layout:auto"}
 
 ## Painéis {#dashboards}
 
-O Adobe Experience Platform fornece vários painéis por meio dos quais você pode visualizar insights importantes sobre os dados de sua organização, conforme capturados durante instantâneos diários.
+A Adobe Experience Platform fornece vários painéis para você visualizar insights importantes sobre os dados de sua organização, que são capturados por instantâneos diários.
 
 **Recursos novos ou atualizados**
 | Recurso | Descrição | | — | — | | Insights personalizáveis para relatórios estendidos do aplicativo | Perfeitamente [transforme o resultado da análise SQL em formatos visuais compreensíveis e amigáveis para os negócios](../../dashboards/data-distiller/customizable-insights/overview.md). Use consultas SQL personalizadas para manipulação de dados precisa e a criação de gráficos dinâmicos de diversos conjuntos de dados estruturados. Você pode usar o modo pro de consulta para executar análises complexas com SQL e, em seguida, compartilhar essa análise com usuários não técnicos por meio de gráficos em seu painel personalizado ou exportá-los em arquivos CSV. |
 
-{style=“table-layout:auto”}
+{style="table-layout:auto"}
 
 ## Governança de dados {#governance}
 
@@ -60,7 +61,24 @@ A Governança de dados da Adobe Experience Platform é uma série de estratégia
 | --- | --- |
 | Suporte mTLS para destinos da API HTTP e ações personalizadas do Adobe Journey Optimizer | Aumente a confiança do cliente com as medidas de segurança reforçadas do protocolo MTLS (Mutual Transport Layer Security). A variável [Destino da API HTTP do Experience Platform](../../destinations/catalog/streaming/http-destination.md#mtls-protocol-support) e [Ações personalizadas do Adobe Journey Optimizer](https://experienceleague.adobe.com/en/docs/journey-optimizer/using/orchestrate-journeys/about-journey-building/using-custom-actions) agora oferecem suporte ao protocolo mTLS ao enviar dados para endpoints configurados. Nenhuma configuração adicional é necessária em sua ação personalizada ou destino da API HTTP para ativar o mTLS; esse processo ocorre automaticamente quando um terminal habilitado para mTLS é detectado. Você pode [baixe o certificado público do Adobe Journey Optimizer aqui](../../landing/governance-privacy-security/encryption.md#download-certificates) e a variável [Certificado público do Serviço de destinos aqui](../../landing/governance-privacy-security/encryption.md#download-certificates).<br>Consulte a [Documentação da criptografia de dados Experience Platform](../../landing/governance-privacy-security/encryption.md#mtls-protocol-support) para obter mais informações sobre protocolos de conexão de rede ao exportar dados para sistemas de terceiros. |
 
-{style=“table-layout:auto”}
+{style="table-layout:auto"}
+
+## Destinos {#destinations}
+
+[!DNL Destinations] são integrações pré-construídas com plataformas de destino que permitem a ativação perfeita de dados da Adobe Experience Platform. É possível usar destinos para ativar seus dados conhecidos e desconhecidos para campanhas de marketing entre canais, campanhas de email, publicidade direcionada e muitos outros casos de uso.
+
+**Funcionalidades novas ou atualizadas** {#destinations-new-updated-functionality}
+
+| Funcionalidade | Descrição |
+| ----------- | ----------- |
+| Reordenar campos de mapeamento para destinos em lote | Agora é possível alterar a ordem das colunas nas exportações de CSV arrastando e soltando os campos de mapeamento na [etapa de mapeamento](../../destinations/ui/activate-batch-profile-destinations.md#mapping). A ordem dos campos mapeados na interface reflete a ordem das colunas no arquivo CSV exportado, de cima para baixo, com a linha superior sendo a coluna mais à esquerda do arquivo CSV. |
+| Agendamentos de exportação padrão pré-selecionados para destinos de lote | O Experience Platform agora define automaticamente um agendamento padrão para cada exportação de arquivo. Consulte a documentação em [agendamento de exportações de público](../../destinations/ui/activate-batch-profile-destinations.md#scheduling) para saber como modificar o cronograma padrão. |
+| Editar vários agendamentos de ativação de público para destinos em lote | Agora é possível editar o agendamento de ativação para vários públicos-alvo da [página de detalhes do destino](../../destinations/ui/destination-details-page.md#bulk-edit-schedule). |
+| Exportar vários públicos-alvo sob demanda para destinos em lote | Agora é possível selecionar e exportar vários públicos para destinos em lote por meio do [exportar arquivos por demanda](../../destinations/ui/export-file-now.md) funcionalidade. |
+
+{style="table-layout:auto"}
+
+Para obter informações mais gerais sobre destinos, consulte a [visão geral de destinos](../../destinations/home.md).
 
 ## Query Service {#query-service}
 
@@ -75,7 +93,7 @@ O Query Service permite usar SQL padrão para consultar dados no [!DNL Data Lake
 | Inventário de log de consulta simplificado | Agora você pode usar uma melhor eficiência na solução de problemas e no monitoramento de tarefas com um [interface simplificada de logs de consulta](../../query-service/ui/query-logs.md#filter-logs): <ul><li> A interface do usuário da Platform agora exclui todas as &quot;Consultas do sistema&quot; da guia Logs por padrão. </li><li> Exibir consultas do sistema ao desmarcar **Excluir consultas do sistema**. </li></ul> <br> ![Guia Logs no espaço de trabalho da interface de queries.](../2024/assets/may/query-log.png "Guia Logs no espaço de trabalho da interface de queries."){width="100" zoomable="yes"} <br> Use a interface simplificada de logs de consulta para obter uma visualização mais focada, que ajuda a identificar e analisar rapidamente os logs relevantes. |
 | Seletor de banco de dados | Use o novo menu suspenso do seletor de banco de dados para [acesse visualizações de dados do Customer Journey Analytics de forma conveniente a partir do Power BI Tableau](../../query-service/ui/credentials.md#connect-to-customer-journey-analytics). Agora é possível selecionar o banco de dados desejado diretamente na interface do usuário da Platform, para uma integração mais simples das ferramentas de BI. <br> ![Guia Credenciais no espaço de trabalho da interface do Queries.](../2024/assets/may/database-selector.png "Guia Credenciais no espaço de trabalho da interface do Queries."){width="100" zoomable="yes"} <br> |
 
-{style=“table-layout:auto”}
+{style="table-layout:auto"}
 
 ## Serviço de segmentação {#segmentation}
 
@@ -87,7 +105,7 @@ O [!DNL Segmentation Service] permite segmentar dados relacionados a indivíduos
 | --- | --- |
 | Importar públicos gerados externamente | Agora a importação de públicos gerados externamente requer a permissão &quot;Importar público-alvo&quot;. Para saber mais sobre permissões, leia a [guia da interface de permissões](../../access-control/home.md#permissions). |
 
-{style=“table-layout:auto”}
+{style="table-layout:auto"}
 
 ## Origens {#sources}
 
@@ -103,7 +121,7 @@ Use fontes no Experience Platform para assimilar dados de um aplicativo Adobe ou
 | Suporte para exemplo de fluxo de dados para o [!DNL Marketo Engage] origem | A variável [!DNL Marketo Engage] A origem agora é compatível com fluxos de dados de amostra. Ative a configuração de fluxo de dados de amostra para limitar a taxa de assimilação e experimente os recursos de Experience Platform sem precisar assimilar grandes quantidades de dados. Para obter mais informações, leia o guia em [criação de um fluxo de dados para [!DNL Marketo Engage] na interface](../../sources/tutorials/ui/create/adobe-applications/marketo.md). |
 | Atualizações na lista de permissões de endereço IP | Dependendo da sua localização, você deve adicionar um conjunto de novos endereços IP à lista de permissões para usar fontes de transmissão com êxito. Para obter uma lista abrangente dos novos endereços IP, leia a [Guia de lista de permissões de endereço IP](../../sources/ip-address-allow-list.md). |
 
-{style=“table-layout:auto”}
+{style="table-layout:auto"}
 
 **Documentação nova ou atualizada**
 
@@ -111,7 +129,7 @@ Use fontes no Experience Platform para assimilar dados de um aplicativo Adobe ou
 | --- | --- |
 | Atualizações de documentação do [!DNL Google PubSub] | A variável [!DNL Google PubSub] a documentação de origem foi atualizada com um guia de pré-requisitos abrangente. Use a nova seção de pré-requisitos para saber como criar sua conta de serviço, conceder permissões no nível de tópico ou de assinatura e definir configurações para otimizar o uso do [!DNL Google PubSub] origem. Leia o [[!DNL Google PubSub] visão geral](../../sources/connectors/cloud-storage/google-pubsub.md) para obter mais informações. |
 
-{style=“table-layout:auto”}
+{style="table-layout:auto"}
 
 Para obter mais informações sobre fontes, leia a [visão geral das origens](../../sources/home.md).
 
