Updated by task 'AUTO_TM_MT_1716946293857'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/c0287285a517068505ee618eb708bc8ef08e6d2d

--- a/help/release-notes/2019/july-2019.md
+++ b/help/release-notes/2019/july-2019.md
@@ -1,20 +1,20 @@
 ---
 title: Notas de versão da Adobe Experience Platform de julho de 2019
-description: As notas de versão de julho de 2019 para Adobe Experience Platform.
+description: As notas de versão de julho de 2019 da Adobe Experience Platform.
 doc-type: release notes
 last-update: July 31, 2019
 author: ens28527
 exl-id: 562e331a-a00b-41f7-9684-800ad0f3c471
-source-git-commit: ce967ae176fce81aa26d92b3f0ee8be006808657
+source-git-commit: e52eb90b64ae9142e714a46017cfd14156c78f8b
 workflow-type: tm+mt
-source-wordcount: '809'
-ht-degree: 3%
+source-wordcount: '807'
+ht-degree: 7%
 
 ---
 
 # Notas de versão da Adobe Experience Platform
 
-**Data de lançamento: 25 de julho de 2019**
+**Data de lançamento: sexta-feira, 25 de julho de 2019**
 
 Novos recursos na Adobe Experience Platform:
 
@@ -41,7 +41,7 @@ Adobe Experience Platform [!DNL Privacy Service] O fornece uma API RESTful e uma
 
 **Correções de erros**
 
-* None.
+* Nenhum.
 
 Para obter mais informações, visite o [visão geral do Privacy Service](../../privacy-service/home.md).
 
@@ -49,7 +49,7 @@ Para obter mais informações, visite o [visão geral do Privacy Service](../../
 
 A normalização e a interoperabilidade são conceitos fundamentais [!DNL Experience Platform]. [!DNL Experience Data Model] O (XDM), orientado pelo Adobe, é um esforço para padronizar os dados de experiência do cliente e definir esquemas para o gerenciamento da experiência do cliente.
 
-O XDM é uma especificação documentada publicamente projetada para melhorar o potencial das experiências digitais. Ele fornece estruturas e definições comuns para que qualquer aplicativo se comunique com os serviços na Adobe Experience Platform. Seguindo os padrões XDM, todos os dados de experiência do cliente podem ser incorporados a uma representação comum, fornecendo insights de maneira mais rápida e integrada. Você pode obter insights valiosos das ações do cliente, definir públicos do cliente por meio de segmentos e usar atributos do cliente para fins de personalização.
+O XDM é uma especificação documentada publicamente projetada para melhorar o potencial das experiências digitais. Ele fornece estruturas e definições comuns para que qualquer aplicativo se comunique com os serviços na Adobe Experience Platform. Seguindo os padrões XDM, todos os dados de experiência do cliente podem ser incorporados a uma representação comum, fornecendo insights de maneira mais rápida e integrada. Você pode obter insights valiosos sobre ações de clientes, definir públicos-alvo por meio de segmentos e usar atributos de clientes para fins de personalização.
 
 O XDM é o mecanismo que permite [!DNL Experience Cloud], viabilizada pelo Adobe Experience Platform, para enviar a mensagem certa à pessoa certa, no canal direito, no momento exato.
 
