--- a/help/release-notes/2019/may-2019.md
+++ b/help/release-notes/2019/may-2019.md
@@ -1,20 +1,20 @@
 ---
-title: Notas de versão da Adobe Experience Platform de maio de 2019
-description: As notas de versão de maio de 2019 para Adobe Experience Platform.
+title: Notas da versão de maio de 2019 da Adobe Experience Platform
+description: As notas de versão de maio de 2019 da Adobe Experience Platform.
 doc-type: release notes
 last-update: June 21, 2019
 author: crhoades
 exl-id: 2e48c279-5e58-465f-b224-c96813841d0b
-source-git-commit: fcd44aef026c1049ccdfe5896e6199d32b4d1114
+source-git-commit: e52eb90b64ae9142e714a46017cfd14156c78f8b
 workflow-type: tm+mt
-source-wordcount: '1792'
-ht-degree: 6%
+source-wordcount: '1795'
+ht-degree: 8%
 
 ---
 
 # Notas de versão da Adobe Experience Platform
 
-**Data de lançamento: 15 de maio de 2019**
+**Data de lançamento: quinta-feira, 15 de maio de 2019**
 
 Novos recursos na Adobe Experience Platform:
 
@@ -28,7 +28,7 @@ Novos recursos na Adobe Experience Platform:
 
 ## [!DNL Data Ingestion] {#ingestion}
 
-O Adobe Experience Platform fornece um conjunto avançado de recursos para assimilar qualquer tipo e qualquer latência de dados. Você pode assimilar usando APIs de lote ou transmissão, usando conectores criados por Adobe, parceiros de integração de dados ou a interface do usuário do Adobe Experience Platform.
+A Adobe Experience Platform fornece um conjunto avançado de recursos para assimilar qualquer tipo e qualquer latência de dados. Você pode assimilar usando APIs de lote ou transmissão, usando conectores criados por Adobe, parceiros de integração de dados ou a interface do usuário do Adobe Experience Platform.
 
 Para obter a documentação do produto, consulte [Visão geral da assimilação de dados](../../ingestion/home.md).
 
@@ -46,7 +46,7 @@ Use a API de assimilação em lote para assimilar qualquer tipo de dados na Adob
 
 **Problemas conhecidos**
 
-None.
+Nenhum.
 
 Para obter a documentação do produto, consulte [visão geral da assimilação em lote](../../ingestion/batch-ingestion/overview.md).
 
@@ -57,7 +57,7 @@ Os Adobe Experience Platform Connectors ajudam você a assimilar facilmente seus
 | Recurso | Descrição |
 | -----------| ---------- |
 | Conectores de armazenamento baseados em nuvem | Assimilar dados de [!DNL Microsoft Azure Blob] e [!DNL Amazon S3] armazenamento na nuvem para o Adobe Experience Platform |
-| [!DNL Microsoft Dynamics CRM] &amp; [!DNL Salesforce CRM] | Descubra todos os dados disponíveis em [!DNL Microsoft Dynamics] ou [!DNL Salesforce] CRM Assimilar qualquer objeto, padrão ou personalizado de [!DNL Microsoft Dynamics] ou [!DNL Salesforce] CRM Os dados incrementais podem ser assimilados por hora ou por dia. |  |
+| [!DNL Microsoft Dynamics CRM] &amp; [!DNL Salesforce CRM] | Descubra todos os dados disponíveis em [!DNL Microsoft Dynamics] ou [!DNL Salesforce] CRM Assimilar qualquer objeto, padrão ou personalizado de [!DNL Microsoft Dynamics] ou [!DNL Salesforce] CRM Os dados incrementais podem ser assimilados por hora ou por dia. | |
 
 **Problemas conhecidos**
 
@@ -81,9 +81,9 @@ O Adobe fornece transferência gerenciada de dados das Soluções Adobe para a A
 
 **Problemas conhecidos**
 
-None.
+Nenhum.
 
-### Assimilação por streaming
+### Assimilação por transmissão
 
 A assimilação de streaming envia dados para o [!DNL Experience Platform] em tempo real de dispositivos cliente e do lado do servidor. As atualizações podem ser feitas no [!DNL Real-Time Customer Profiles] em latência de subsegundos com suporte para coleta de dados autenticada e cargas de vários registros.
 
@@ -96,7 +96,7 @@ A assimilação de streaming envia dados para o [!DNL Experience Platform] em te
 
 **Problemas conhecidos**
 
-None.
+Nenhum.
 
 Para obter a documentação do produto, consulte [visão geral da assimilação por transmissão](../../ingestion/streaming-ingestion/overview.md).
 
@@ -110,7 +110,7 @@ Monitore a assimilação em lote e por transmissão na Adobe Experience Platform
 
 **Problemas conhecidos**
 
-None.
+Nenhum.
 
 ## Gerenciamento de dados {#management}
 
@@ -126,7 +126,7 @@ O Adobe Experience Platform oferece a capacidade de descobrir todos os seus dado
 
 **Problemas conhecidos**
 
-None.
+Nenhum.
 
 ### [!DNL Catalog]
 
@@ -138,7 +138,7 @@ O [!DNL Catalog] é o sistema de registro para localização e linhagem de dados
 
 **Problemas conhecidos**
 
-None.
+Nenhum.
 
 Para começar a trabalhar com o [!DNL Catalog Service] API, revise o [Visão geral do serviço de catálogo](../../catalog/home.md).
 
@@ -153,7 +153,7 @@ O Adobe Experience Platform oferece suporte à integração com Ferramentas de p
 
 **Problemas conhecidos**
 
-None.
+Nenhum.
 
 Para obter a documentação do produto, consulte [Visão geral de ETL](../../etl/home.md)).
 
@@ -161,7 +161,7 @@ Para obter a documentação do produto, consulte [Visão geral de ETL](../../etl
 
 A normalização e a interoperabilidade são conceitos fundamentais [!DNL Experience Platform]. [!DNL Experience Data Model] O (XDM), orientado pelo Adobe, é um esforço para padronizar os dados de experiência do cliente e definir esquemas para o gerenciamento da experiência do cliente.
 
-O XDM é uma especificação documentada publicamente projetada para melhorar o potencial das experiências digitais. Ele fornece estruturas e definições comuns para que qualquer aplicativo se comunique com os serviços na Adobe Experience Platform. Seguindo os padrões XDM, todos os dados de experiência do cliente podem ser incorporados a uma representação comum, fornecendo insights de maneira mais rápida e integrada. Você pode obter insights valiosos das ações do cliente, definir públicos do cliente por meio de segmentos e usar atributos do cliente para fins de personalização.
+O XDM é uma especificação documentada publicamente projetada para melhorar o potencial das experiências digitais. Ele fornece estruturas e definições comuns para que qualquer aplicativo se comunique com os serviços na Adobe Experience Platform. Seguindo os padrões XDM, todos os dados de experiência do cliente podem ser incorporados a uma representação comum, fornecendo insights de maneira mais rápida e integrada. Você pode obter insights valiosos sobre ações de clientes, definir públicos-alvo por meio de segmentos e usar atributos de clientes para fins de personalização.
 
 O XDM é o mecanismo que permite [!DNL Experience Clou]d, habilitado pelo Adobe Experience Platform, para enviar a mensagem certa à pessoa certa, no canal direito, no momento exato.
 
@@ -174,7 +174,7 @@ A metodologia com base na qual [!DNL Experience Platform] é criado, [!DNL XDM S
 
 **Problemas conhecidos**
 
-None.
+Nenhum.
 
 Para saber mais sobre como trabalhar com XDM usando o [!DNL Schema Registry] API e [!DNL Schema Editor], leia o [Documentação do sistema XDM](../../xdm/home.md).
 
@@ -184,17 +184,17 @@ Para saber mais sobre como trabalhar com XDM usando o [!DNL Schema Registry] API
 
 | Recurso | Descrição |
 | -----------| ---------- |
-| [!DNL Real-time customer profile] | [!DNL Profile] A assimila dados por meio de entradas de dados, mescla-os com dados existentes no armazenamento de perfil e cria ou modifica a exibição unificada em tempo quase real. Esses dados, que evoluem no tempo com as experiências dos clientes, podem ser usados para fazer recomendações personalizadas. |
+| [!DNL Real-time customer profile] | [!DNL Profile] A assimila dados por meio de entradas de dados, mescla-os com dados existentes no armazenamento Perfil e cria ou modifica a exibição unificada em tempo quase real. Esses dados, que evoluem no tempo com as experiências dos clientes, podem ser usados para fazer recomendações personalizadas. |
 | Visualização da União | Um dos principais recursos do [!DNL Profile] é a capacidade de unificar dados de vários canais. [!DNL Profile] O pode fornecer uma exibição mesclada dos indivíduos na sua base de consumidores, em conjuntos de dados e para identidades vinculadas, conhecidas como exibição de união. |
 | Edge | O Edge Service serve como uma estrutura para coleta de dados de baixa latência, computação conectável e ativação rápida de dados em todos os canais endereçáveis. O Edge Service facilita a personalização em tempo real. |
 
 **Problemas conhecidos**
 
-None.
+Nenhum.
 
 Para obter a documentação do produto, consulte [Visão geral do perfil](../../profile/home.md).
 
-## Identity Service {#identity}
+## Serviço de identidade {#identity}
 
 O serviço de identidade soluciona o desafio fundamental que as identidades desconectadas dos clientes representam, causado pela natureza fragmentada dos dados em cada um dos diferentes sistemas em operação no ecossistema da organização. Ele faz isso unindo identidades em vários dispositivos e em vários sistemas usados pelos consumidores para se envolver com a sua marca. Dessa forma, o Serviço de identidade facilita uma compreensão completa dos clientes e do comportamento deles para que você possa fornecer experiências digitais impactantes em tempo real.
 
@@ -204,13 +204,13 @@ O serviço de identidade soluciona o desafio fundamental que as identidades desc
 
 **Problemas conhecidos**
 
-None.
+Nenhum.
 
 Para obter a documentação do produto, consulte [Visão geral do serviço de identidade](../../identity-service/home.md).
 
 ## [!DNL Segmentation Service] {#segmentation}
 
-[!DNL Segmentation Service] O define um subconjunto específico de perfis da sua loja de perfis, descrevendo os critérios que distinguem um grupo comercializável de pessoas na sua loja de perfis. Os segmentos podem ser baseados em dados de registro (como informações demográficas) ou eventos de séries temporais que representam pontos de contato do cliente com sua marca.
+[!DNL Segmentation Service] O define um subconjunto específico de perfis da sua Loja de perfis, descrevendo os critérios que distinguem um grupo comercializável de pessoas na sua Loja de perfis. Os segmentos podem ser baseados em dados de registro (como informações demográficas) ou eventos de séries temporais que representam pontos de contato do cliente com sua marca.
 
 Por exemplo, em uma campanha de email chamada &quot;Você se esqueceu de comprar seu tênis?&quot;, você pode querer um segmento de público-alvo de todos os usuários que procuraram tênis de corrida nos últimos 30 dias, mas que não concluíram a compra. Ou você pode querer direcionar o conteúdo da Web para exibição somente para usuários com uma determinada classificação em seu programa de recompensas.
 
@@ -221,7 +221,7 @@ Por exemplo, em uma campanha de email chamada &quot;Você se esqueceu de comprar
 
 **Problemas conhecidos**
 
-None.
+Nenhum.
 
 Para obter a documentação do produto, consulte [Visão geral do serviço de segmentação](../../segmentation/home.md)
 
@@ -243,6 +243,6 @@ A estrutura de governança de dados simplifica e simplifica o processo de catego
 
 **Problemas conhecidos**
 
-* None.
+* Nenhum.
 
 Para obter mais informações, consulte [Visão geral da governança de dados](../../data-governance/home.md)).
