--- a/help/release-notes/2022/july-2022.md
+++ b/help/release-notes/2022/july-2022.md
@@ -2,10 +2,10 @@
 title: Notas de versão da Adobe Experience Platform de julho de 2022
 description: As notas de versão de julho de 2022 da Adobe Experience Platform.
 exl-id: e34751dc-3a83-4b34-b5f4-0379abaaf177
-source-git-commit: d23f1cc9dd0155aceae78bf938d35463e9c38181
+source-git-commit: e52eb90b64ae9142e714a46017cfd14156c78f8b
 workflow-type: tm+mt
 source-wordcount: '2234'
-ht-degree: 26%
+ht-degree: 27%
 
 ---
 
@@ -47,7 +47,7 @@ Para obter mais informações sobre os widgets disponíveis para visualizar as m
 
 ### Painéis de perfil
 
-O painel Perfis exibe um instantâneo dos dados do atributo (registro) que sua organização tem na Loja de perfis do Experience Platform.
+O painel Perfis exibe um instantâneo dos dados do atributo (registro) que sua organização tem na área de armazenamento Perfil do Experience Platform.
 
 **Recursos atualizados**
 
@@ -59,7 +59,7 @@ Para obter mais informações sobre o painel Perfis, consulte a [Visão geral do
 
 ### Painéis de destinos
 
-O painel Destinos exibe um instantâneo dos destinos que sua organização ativou no Experience Platform.
+O painel Destinos exibe um instantâneo dos destinos que sua organização ativou na Experience Platform.
 
 **Recursos atualizados**
 
