--- a/help/release-notes/2022/may-2022.md
+++ b/help/release-notes/2022/may-2022.md
@@ -2,7 +2,7 @@
 title: Notas da versão de maio de 2022 da Adobe Experience Platform
 description: As notas de versão de maio de 2022 da Adobe Experience Platform.
 exl-id: bcde04aa-7858-437c-a692-2841124006a5
-source-git-commit: d23f1cc9dd0155aceae78bf938d35463e9c38181
+source-git-commit: e52eb90b64ae9142e714a46017cfd14156c78f8b
 workflow-type: tm+mt
 source-wordcount: '2265'
 ht-degree: 17%
@@ -100,7 +100,7 @@ O Adobe Experience Platform fornece vários painéis por meio dos quais você po
 
 ### Painéis de perfis
 
-O painel de perfis exibe um instantâneo dos dados do atributo (registro) que sua organização tem na Loja de perfis do Experience Platform.
+O painel de perfis exibe um instantâneo dos dados do atributo (registro) que sua organização tem na área de armazenamento Perfil do Experience Platform.
 
 **Recursos atualizados**
 
@@ -141,7 +141,7 @@ Para obter mais informações sobre segmentos, consulte [documentação do paine
 
 ## Coleção de dados {#data-collection}
 
-O Experience Platform fornece um conjunto de tecnologias que permitem coletar dados de experiência do cliente do lado do cliente e enviá-los para a Rede de borda da Adobe Experience Platform, onde eles podem ser enriquecidos, transformados e distribuídos para destinos Adobe ou não Adobe.
+O Experience Platform fornece um conjunto de tecnologias que permitem coletar dados de experiência do cliente do lado do cliente e enviá-los para o Edge Network da Adobe Experience Platform, onde podem ser enriquecidos, transformados e distribuídos para destinos Adobe ou não Adobe.
 
 **Novos recursos**
 
@@ -151,7 +151,7 @@ O Experience Platform fornece um conjunto de tecnologias que permitem coletar da
 | Importar regras de mapeamento de sequência de dados | Ao configurar o Preparo de dados para a coleção de dados, é possível [importar as regras de mapeamento de um fluxo de dados existente](../../datastreams/data-prep.md#import-mapping) em vez de configurar cada mapeamento de campo manualmente. |
 | Suporte a mapeamento de datasteam para SDK móvel | Agora é possível configurar o Preparo de dados para a coleção de dados em sequências de dados destinadas ao uso com o SDK móvel do Experience Platform. |
 | Suporte a mapeamento de fluxo de dados para objetos XDM | Mapear objetos XDM além de objetos da camada de dados quando [configuração do Preparo de dados para a coleção de dados](../../datastreams/data-prep.md#select-data). |
-| Integração com fluxos de dados | Use o catálogo de fontes na Platform para acessar seus dados na rede de borda da Platform, incluindo o Preparo de dados para coleção de dados e suporte aprimorado para avisos de Preparo de dados. Consulte a [Visão geral da fonte de coleta de dados do Adobe](../../sources/connectors/adobe-applications/data-collection.md) para obter mais informações. |
+| Integração com fluxos de dados | Use o catálogo de fontes na Platform para acessar seus dados no Platform Edge Network, incluindo o Preparo de dados para coleção de dados e suporte aprimorado para avisos do Preparo de dados. Consulte a [Visão geral da fonte de coleta de dados do Adobe](../../sources/connectors/adobe-applications/data-collection.md) para obter mais informações. |
 
 Para obter mais informações, consulte [visão geral da coleção de dados](../../collection/home.md).
 
@@ -255,7 +255,7 @@ A Experience Platform fornece uma API RESTful e uma interface interativa que per
 | Controle de acesso baseado em atributos nas origens | Agora é possível gerenciar e controlar o acesso a campos e atributos de origem individuais durante a assimilação. **Nota**: o controle de acesso baseado em atributos está disponível atualmente em uma versão limitada para clientes do setor de saúde nos EUA. Esse recurso estará disponível para todos os clientes da Real-time Customer Data Platform depois de totalmente lançado. |
 | Versão beta de [!DNL Zendesk] origem | Use o [!DNL Zendesk] fonte para assimilar dados de usuário, agente e organização de sua [!DNL Zendesk] instância para [!DNL Profile] enriquecimento. Consulte a [[!DNL Zendesk] visão geral da origem](../../sources/connectors/customer-success/zendesk.md) para obter mais informações. |
 | Disponibilidade geral de B2B [!DNL Microsoft Dynamics] origem | Agora você pode usar o [!DNL Microsoft Dynamics] origem para assimilar objetos B2B como contas, oportunidades, campanhas, lista de marketing e membros da lista de marketing. Consulte a [[!DNL Microsoft Dynamics] visão geral da origem](../../sources/connectors/crm/ms-dynamics.md) para obter mais informações. |
-| Suporte para coleta de dados Adobe | Use o catálogo de fontes na Platform para acessar seus dados na rede de borda da Platform, incluindo o Preparo de dados para coleção de dados e suporte aprimorado para avisos de Preparo de dados. Consulte a [Visão geral da fonte de coleta de dados do Adobe](../../sources/connectors/adobe-applications/data-collection.md) para obter mais informações. |
+| Suporte para coleta de dados Adobe | Use o catálogo de fontes na Platform para acessar seus dados no Platform Edge Network, incluindo o Preparo de dados para coleção de dados e suporte aprimorado para avisos do Preparo de dados. Consulte a [Visão geral da fonte de coleta de dados do Adobe](../../sources/connectors/adobe-applications/data-collection.md) para obter mais informações. |
 | Suporte para assimilação de arquivos com `ISO-8859-1` codificação | Use o `encoding` parâmetro a ser assimilado `ISO-8859-1` arquivos codificados com uma fonte de armazenamento em nuvem para a Platform usando o [!DNL Flow Service] API. Consulte o guia sobre [criando uma conexão de origem de armazenamento na nuvem](../../sources/tutorials/api/collect/cloud-storage.md) para obter mais informações. |
 
 {style="table-layout:auto"}
