Updated by task 'AUTO_TM_MT_1718805151287'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/800f25a3f69517faaf88666e8b84c774a9d5be31

--- a/help/release-notes/2024/june-2024.md
+++ b/help/release-notes/2024/june-2024.md
@@ -1,10 +1,11 @@
 ---
 title: Notas de versão da Adobe Experience Platform de junho de 2024
 description: As notas de versão de junho de 2024 da Adobe Experience Platform.
-source-git-commit: 94be2799f25fd560051ab4ecfc57c49ca27672da
+exl-id: 712d2967-2bac-47d7-ad02-8e93bdb28d96
+source-git-commit: e1b56c6150274748c35fedfc1e1b6bbbf66d1bfb
 workflow-type: tm+mt
-source-wordcount: '1144'
-ht-degree: 21%
+source-wordcount: '1195'
+ht-degree: 20%
 
 ---
 
@@ -71,6 +72,7 @@ Para obter mais informações sobre o Preparo de dados, leia a [Visão geral do 
 | ----------- | ----------- |
 | Aprimoramento da API de exportação ad hoc para exportar públicos externos | Agora você pode usar a API de exportação ad-hoc para exportar públicos externos (upload personalizado). [Leia mais](/help/destinations/api/ad-hoc-activation-api.md) . |
 | (Beta) Funções adicionais compatíveis com a fase beta do suporte a matriz de exportação | Anteriormente, ao ativar públicos-alvo para destinos baseados em arquivo e selecionar Usar campo calculado, você estava limitado a usar um subconjunto dos públicos-alvo disponíveis por meio do preparo de dados. Essa limitação foi removida e os clientes têm acesso a todas as funções disponíveis por meio do preparo de dados ao exportar públicos-alvo para destinos baseados em arquivo. [Leia mais](/help/destinations/ui/export-arrays-calculated-fields.md#supported-functions). |
+| Mostrar apenas campos com dados na etapa de mapeamento | Ao mapear atributos de perfil para seus destinos, agora é possível alternar entre todos os atributos de perfil ou apenas aqueles que contêm dados. Por padrão, somente os campos com dados são exibidos. Consulte os guias de ativação para [lote](../../destinations/ui/activate-batch-profile-destinations.md#mapping) e [transmissão](../../destinations/ui/activate-segment-streaming-destinations.md#mapping) destinos para obter mais detalhes. |
 
 {style="table-layout:auto"}
 
@@ -117,4 +119,3 @@ Para saber mais sobre [!DNL Use Case Playbooks], leia as seguintes páginas de d
 - Obter uma lista de todos os [manuais disponíveis](/help/use-case-playbooks/playbooks/playbooks-list.md), agrupados por produto (Real-Time CDP ou Journey Optimizer).
 - Saiba mais sobre [permissões](/help/use-case-playbooks/playbooks/get-started.md#grant-your-team-the-required-access-permissions) são necessários para usar manuais e os ativos que eles criam.
 - Compreender o [funcionalidade de reconhecimento de dados](/help/use-case-playbooks/playbooks/data-awareness.md) que permite duplicar ativos gerados para outros ambientes de sandbox.
-
