Updated by task 'AUTO_TM_MT_1718847333673'  Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/39f69441448fff67ec1b9603a69f41dc2b2507e9

--- a/help/release-notes/2024/june-2024.md
+++ b/help/release-notes/2024/june-2024.md
@@ -2,9 +2,9 @@
 title: Notas de versão da Adobe Experience Platform de junho de 2024
 description: As notas de versão de junho de 2024 da Adobe Experience Platform.
 exl-id: 712d2967-2bac-47d7-ad02-8e93bdb28d96
-source-git-commit: b9707c40beec3000456510a8a384a0af58d6d9fa
+source-git-commit: b2b38c1b540d074998e96712465ff52c68371004
 workflow-type: tm+mt
-source-wordcount: '1357'
+source-wordcount: '1358'
 ht-degree: 18%
 
 ---
@@ -127,7 +127,7 @@ Para obter mais informações sobre o [!DNL Segmentation Service], consulte a [V
 
 Para começar, leia o [Visão geral dos manuais de caso de uso](/help/use-case-playbooks/playbooks/overview.md), que fornece uma visão geral da funcionalidade dos manuais, sua finalidade e uma demonstração completa, incluindo como criar instâncias e importar ativos gerados para outros ambientes de sandbox.
 
-Para saber como acessar e configurar uma sandbox inspiradora para experimentar e explorar vários manuais de casos de uso, consulte a [Descubra o manual correto](/help/use-case-playbooks/playbooks/discover.md) documento.
+Para saber como acessar e configurar uma sandbox inspiradora para experimentar e explorar vários manuais de casos de uso, consulte a [Navegar até os manuais de casos de uso](/help/use-case-playbooks/playbooks/navigate.md) documento.
 
 Para saber mais sobre [!DNL Use Case Playbooks], leia as seguintes páginas de documentação:
 
