--- a/help/release-notes/2024/june-2024.md
+++ b/help/release-notes/2024/june-2024.md
@@ -2,16 +2,16 @@
 title: Notas de versão da Adobe Experience Platform de junho de 2024
 description: As notas de versão de junho de 2024 da Adobe Experience Platform.
 exl-id: 712d2967-2bac-47d7-ad02-8e93bdb28d96
-source-git-commit: b2b38c1b540d074998e96712465ff52c68371004
+source-git-commit: af27ca20b7d611bb6f6b13b57dfc2df1f643a0b6
 workflow-type: tm+mt
-source-wordcount: '1358'
+source-wordcount: '1357'
 ht-degree: 18%
 
 ---
 
 # Notas de versão da Adobe Experience Platform
 
-**Data de lançamento: junho de 2024**
+**Data de lançamento: quarta-feira, 18 de junho de 2024**
 
 >[!TIP]
 >
